# GaussianBeam

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: gui_demo.py  numeric_demo.py  symbolic_demo.py  test.py
gaussianbeam/: units.py
gaussianbeam/raytrace/: main.py
src/gaussianbeam/: units.py
src/gaussianbeam/gui/: __init__.py  app.py  elements.py  model.py
src/gaussianbeam/raytrace/: main.py
